feat: improve landing page template | jmn

--- a/src/landing-page/1/index.html
+++ b/src/landing-page/1/index.html
@@ -46,69 +46,68 @@
 
 <main class="grid-template gap-y-fluid-xl pb-fluid-2xl">
 
-  <div class="col-full grid grid-cols-subgrid items-end h-[clamp(480px,80vh,1000px)]">
+  <div class="col-full grid grid-cols-subgrid items-end h-[clamp(480px,80vh,1000px)] after:absolute after:inset-[-60px_0_0_0] after:-z-1 after:pointer-events-none after:bg-fade-to-t">
     <video class="col-span-full row-span-full min-w-full w-full min-h-full h-full object-cover object-center" poster="/assets/mood-porsche-gts.webp" loop muted autoplay playsinline aria-hidden="true">
       <source src="/assets/mood-porsche-gts.mp4" type="video/mp4">
       <source src="/assets/mood-porsche-gts.webm" type="video/webm">
     </video>
     <div class="col-extended row-span-full mb-fluid-lg dark">
-      <h1 class="prose-display-sm">Jelena Ostapenko</h1>
-      <h2 class="prose-text-md text-contrast-medium">Winner 2025</h2>
+      <h1 class="prose-display-sm pb-fluid-md">Landing Page</h1>
+      <p-button theme="dark" variant="ghost">
+        Some label
+      </p-button>
     </div>
   </div>
 
-  <div class="col-basic grid grid-cols-subgrid gap-y-fluid-md">
-    <p-link-tile class="col-span-full sm:col-span-one-third" href="#" label="Tickets 2026" description="Tickets 2026" compact="true" weight="regular" aspect-ratio="{base: '4/3', xs: '16/9', s: '3/4', m: '1/1'}">
-      <img src="/assets/lights.jpg" alt="Some image description" />
-    </p-link-tile>
-    <p-link-tile class="col-span-full sm:col-span-one-third" href="#" label="Results" description="Results" compact="true" weight="regular" aspect-ratio="{base: '4/3', xs: '16/9', s: '3/4', m: '1/1'}">
-      <img src="/assets/lights.jpg" alt="Some image description" />
-    </p-link-tile>
-    <p-link-tile class="col-span-full sm:col-span-one-third" href="#" label="Media" description="Media" compact="true" weight="regular" aspect-ratio="{base: '4/3', xs: '16/9', s: '3/4', m: '1/1'}">
-      <img src="/assets/lights.jpg" alt="Some image description" />
-    </p-link-tile>
+  <div class="col-full grid grid-cols-subgrid gap-y-fluid-md dark bg-base p-fluid-xl -mt-fluid-xl -mb-fluid-xl">
+
+    <div class="col-basic grid grid-cols-subgrid gap-y-fluid-md" >
+      <p-link-tile class="col-span-full sm:col-span-one-half" href="#" label="Tickets 2026" description="Teaser Headline" compact="true" weight="regular" aspect-ratio="{base: '4/3', xs: '16/9', s: '3/4', m: '1/1'}">
+        <img src="/assets/chrono-car.webp" alt="Some image description" />
+      </p-link-tile>
+      <p-link-tile class="col-span-full sm:col-span-one-half" href="#" label="Results" description="Teaser Headline" compact="true" weight="regular" aspect-ratio="{base: '4/3', xs: '16/9', s: '3/4', m: '1/1'}">
+        <img src="/assets/addon.webp" alt="Some image description" />
+      </p-link-tile>
+    </div>
   </div>
 
-  <div class="col-full grid grid-cols-subgrid py-fluid-xl bg-surface">
-    <p-carousel class="col-span-full" slides-per-page="{ base: 1, xs: 2, m: 3 }" align-header="center" width="basic" heading="Press release">
-      <p-link-tile href="#" label="Timeless Enthusiast" description="Timeless Enthusiast" compact="true"
-                   aspect-ratio="{base: '1:1', xs: '3:4'}" weight="regular">
-        <img src="/assets/lights.jpg" alt="Some alternative text for screen readers describing the image"/>
+  <div class="col-full grid grid-cols-subgrid py-fluid-xl ">
+    <p-carousel class="col-span-full" slides-per-page="{ base: 1, xs: 1, m: 1 }" align-header="center" width="extended" heading="Carousel">
+      <p-link-tile href="#" label="Timeless Enthusiast" description="Teaser Heading" compact="true"
+                   aspect-ratio="{base: '1:1', xs: '16:9'}" weight="regular">
+        <img src="/assets/interieur-1.webp" alt="Some alternative text for screen readers describing the image"/>
       </p-link-tile>
-      <p-link-tile href="#" label="The Loyalist" description="The Loyalist" compact="true"
-                   aspect-ratio="{base: '1:1', xs: '3:4'}"
+      <p-link-tile href="#" label="The Loyalist" description="Teaser Heading" compact="true"
+                   aspect-ratio="{base: '1:1', xs: '16:9'}"
                    weight="regular">
-        <img src="/assets/lights.jpg" alt="Some alternative text for screen readers describing the image"/>
+        <img src="/assets/interieur-2.webp" alt="Some alternative text for screen readers describing the image"/>
       </p-link-tile>
-      <p-link-tile href="#" label="Urbanist" description="Urbanist" compact="true"
-                   aspect-ratio="{base: '1:1', xs: '3:4'}" weight="regular">
-        <img src="/assets/lights.jpg" alt="Some alternative text for screen readers describing the image"/>
+      <p-link-tile href="#" label="Urbanist" description="Teaser Heading" compact="true"
+                   aspect-ratio="{base: '1:1', xs: '16:9'}" weight="regular">
+        <img src="/assets/interieur-3.webp" alt="Some alternative text for screen readers describing the image"/>
       </p-link-tile>
-      <p-link-tile href="#" label="Urbanist" description="Urbanist" compact="true"
-                   aspect-ratio="{base: '1:1', xs: '3:4'}" weight="regular">
-        <img src="/assets/lights.jpg" alt="Some alternative text for screen readers describing the image"/>
+      <p-link-tile href="#" label="Urbanist" description="Teaser Heading" compact="true"
+                   aspect-ratio="{base: '1:1', xs: '16:9'}" weight="regular">
+        <img src="/assets/interieur-4.webp" alt="Some alternative text for screen readers describing the image"/>
       </p-link-tile>
-      <p-link-tile href="#" label="Urbanist" description="Urbanist" compact="true"
-                   aspect-ratio="{base: '1:1', xs: '3:4'}" weight="regular">
-        <img src="/assets/lights.jpg" alt="Some alternative text for screen readers describing the image"/>
-      </p-link-tile>
+
     </p-carousel>
   </div>
 
   <div class="col-basic grid grid-cols-subgrid gap-y-fluid-xl">
     <div class="col-span-full grid grid-cols-subgrid gap-y-fluid-lg">
-      <img class="col-span-full md:col-start-1 md:col-end-7 md:row-start-1 w-full aspect-4/3 md:aspect-3/4 object-cover rounded-lg" src="/assets/lights.jpg" alt="Some alternative text for screen readers describing the image"/>
+      <img class="col-span-full md:col-start-1 md:col-end-7 md:row-start-1 w-full aspect-4/3 md:aspect-3/4 object-cover rounded-lg" src="/assets/cockpit.webp" alt="Some alternative text for screen readers describing the image"/>
       <div class="col-span-full md:col-start-8 md:col-end-13 md:row-start-1 flex flex-col justify-center items-start">
-        <h3 class="prose-heading-md">Newsletter</h3>
+        <h3 class="prose-heading-md">Some Title</h3>
         <p class="prose-text-sm mt-fluid-sm">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum</p>
         <p class="prose-text-xs text-contrast-medium mt-fluid-sm">Lorem ipsum dolor sit amet, consetetur sadipscing elitr</p>
         <p-link class="mt-fluid-lg" href="#">Some label</p-link>
       </div>
     </div>
     <div class="col-span-full grid grid-cols-subgrid gap-y-fluid-lg">
-      <img class="col-span-full md:col-start-7 md:col-end-13 md:row-start-1 w-full aspect-4/3 md:aspect-3/4 object-cover rounded-lg" src="/assets/lights.jpg" alt="Some alternative text for screen readers describing the image"/>
+      <img class="col-span-full md:col-start-7 md:col-end-13 md:row-start-1 w-full aspect-4/3 md:aspect-3/4 object-cover rounded-lg" src="/assets/chrono.webp" alt="Some alternative text for screen readers describing the image"/>
       <div class="col-span-full md:col-start-1 md:col-end-6 md:row-start-1 flex flex-col justify-center items-start">
-        <h3 class="prose-heading-md">Newsletter</h3>
+        <h3 class="prose-heading-md">Some Title</h3>
         <p class="prose-text-sm mt-fluid-sm">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum</p>
         <p class="prose-text-xs text-contrast-medium mt-fluid-sm">Lorem ipsum dolor sit amet, consetetur sadipscing elitr</p>
         <p-link class="mt-fluid-lg" href="#">Some label</p-link>
