--- a/src/sdx26/2/index.html
+++ b/src/sdx26/2/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="light" style="--accent: yellow">
+<html lang="en" class="light" style="--accent: green">
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -7,6 +7,25 @@
   <title>Marketing (Template)</title>
 </head>
 <body class="bg-base prose-text-sm">
+
+<div class="fixed z-999 bottom-fluid-sm start-fluid-sm bg-frosted-accent backdrop-blur-frosted rounded-lg p-fluid-sm grid gap-fluid-xs">
+  <p-select name="theme" label="Theme" compact="true" value="light">
+    <p-select-option value="light">Light</p-select-option>
+    <p-select-option value="dark">Dark</p-select-option>
+    <p-select-option value="auto">Auto</p-select-option>
+  </p-select>
+  <p-select name="accent" label="Accent" compact="true" value="green">
+    <p-select-option value="green">Aventurin Green</p-select-option>
+    <p-select-option value="blue">Enzian Blue</p-select-option>
+    <p-select-option value="aqua">Frozen Blue</p-select-option>
+    <p-select-option value="red">Copper Ruby</p-select-option>
+    <p-select-option value="limegreen">Oak Green</p-select-option>
+  </p-select>
+  <p-select name="frosted-color" label="Frosted Color" compact="true" value="bg-frosted-accent">
+    <p-select-option value="bg-frosted-accent">bg-frosted-accent</p-select-option>
+    <p-select-option value="bg-contrast-100-accent">bg-contrast-100-accent</p-select-option>
+  </p-select>
+</div>
 
 <header class="grid-template">
   <div class="col-wide grid grid-cols-[minmax(0,1fr)_auto_minmax(0,1fr)] gap-fluid-md items-center min-h-[80px]">
@@ -18,18 +37,6 @@
     <div class="flex flex-wrap gap-static-md items-center justify-end">
       <p-button-pure class="p-static-xs -m-static-xs" title="Search" type="button" icon="search" hide-label="true">Search</p-button-pure>
       <p-button-pure class="p-static-xs -m-static-xs" title="User" type="button" icon="user" hide-label="true">User</p-button-pure>
-      <label class="flex items-center gap-static-xs">
-        Theme:
-        <select name="theme">
-          <option value="light">Light</option>
-          <option value="dark">Dark</option>
-          <option value="auto">Auto</option>
-        </select>
-      </label>
-      <label class="flex items-center gap-static-xs">
-        Accent:
-        <input type="color" name="accent" value="#FFFF00" />
-      </label>
     </div>
   </div>
 </header>
@@ -38,7 +45,7 @@
 
   <div class="col-extended grid grid-cols-subgrid">
     <div class="col-span-full grid place-items-center">
-      <img class="row-span-full col-span-full" src="/assets/aventuringruenmetallic.png" alt="" />
+      <img id="vehicle" class="row-span-full col-span-full" src="/assets/aventuringruenmetallic.png" alt="" />
       <p-model-signature class="[--p-model-signature-width:100%] [--p-model-signature-height:auto] [--p-model-signature-color:color-mix(in_srgb,var(--accent)_30%,transparent)] backdrop-blur-frosted row-span-full col-span-full" size="inherit" model="macan" safe-zone="false"></p-model-signature>
     </div>
     <div class="col-span-full grid gap-fluid-sm justify-items-center">
