feat: add neutral coloring to sdx26 template | sas

--- a/src/sdx26/2/index.html
+++ b/src/sdx26/2/index.html
@@ -15,6 +15,7 @@
     <p-select-option value="auto">Auto</p-select-option>
   </p-select>
   <p-select name="accent" label="Accent" compact="true" value="green">
+    <p-select-option value="neutral">Neutral</p-select-option>
     <p-select-option value="green">Aventurin Green</p-select-option>
     <p-select-option value="blue">Enzian Blue</p-select-option>
     <p-select-option value="aqua">Frozen Blue</p-select-option>
