feat: add frosted demo for sdx26 | sas

--- a/src/sdx26/2/index.html
+++ b/src/sdx26/2/index.html
@@ -87,8 +87,32 @@
           <h4 class="prose-display-md text-center">479<span class="text-lg">km</span></h4>
         </div>
         <div class="p-fluid-md grid gap-fluid-md">
-          <p class="prose-text-md text-center">High voltage for a new way of life: Experience the impressive performance of the Macan - on the road and at the charging station.</p>
+          <div class="h-[200px] overflow-y-auto relative before:h-[60px] before:sticky before:block before:top-0 before:-z-1 before:pointer-events-none before:bg-fade-contrast-100-accent-to-b rounded-lg">
+            <p class="prose-text-md text-center">High voltage for a new way of life: Experience the impressive performance of the Macan - on the road and at the charging station.</p>
+            <p class="prose-text-md text-center">High voltage for a new way of life: Experience the impressive performance of the Macan - on the road and at the charging station.</p>
+            <p class="prose-text-md text-center">High voltage for a new way of life: Experience the impressive performance of the Macan - on the road and at the charging station.</p>
+          </div>
           <button class="explore-e-performance bg-contrast-100-accent backdrop-blur-frosted rounded-lg p-fluid-sm cursor-pointer transition hover:bg-contrast-200-accent">Explore E-Performance</button>
+          <p-tabs-bar>
+            <button type="button">
+              Tab One
+            </button>
+            <button type="button">
+              Tab Two
+            </button>
+            <button type="button">
+              Tab Three
+            </button>
+            <button type="button">
+              Tab One
+            </button>
+            <button type="button">
+              Tab Two
+            </button>
+            <button type="button">
+              Tab Three
+            </button>
+          </p-tabs-bar>
         </div>
       </div>
     </div>
@@ -131,6 +155,35 @@
       </label>
       <button class="bg-contrast-100-accent backdrop-blur-frosted rounded-lg p-fluid-sm cursor-pointer transition hover:bg-contrast-200-accent">Submit</button>
       <button class="bg-contrast-100-accent backdrop-blur-frosted rounded-lg p-fluid-sm cursor-pointer transition hover:bg-contrast-200-accent">Cancel</button>
+      <p-tabs-bar>
+        <button type="button">
+          Tab One
+        </button>
+        <button type="button">
+          Tab Two
+        </button>
+        <button type="button">
+          Tab Three
+        </button>
+        <button type="button">
+          Tab One
+        </button>
+        <button type="button">
+          Tab Two
+        </button>
+        <button type="button">
+          Tab Three
+        </button>
+        <button type="button">
+          Tab One
+        </button>
+        <button type="button">
+          Tab Two
+        </button>
+        <button type="button">
+          Tab Three
+        </button>
+      </p-tabs-bar>
     </form>
     <form class="col-span-one-half p-fluid-md grid gap-fluid-sm">
       <label class="grid gap-fluid-xs">
@@ -157,6 +210,35 @@
       </label>
       <button class="bg-contrast-100-accent backdrop-blur-frosted rounded-lg p-fluid-sm cursor-pointer transition hover:bg-contrast-200-accent">Submit</button>
       <button class="bg-contrast-100-accent backdrop-blur-frosted rounded-lg p-fluid-sm cursor-pointer transition hover:bg-contrast-200-accent">Cancel</button>
+      <p-tabs-bar>
+        <button type="button">
+          Tab One
+        </button>
+        <button type="button">
+          Tab Two
+        </button>
+        <button type="button">
+          Tab Three
+        </button>
+        <button type="button">
+          Tab One
+        </button>
+        <button type="button">
+          Tab Two
+        </button>
+        <button type="button">
+          Tab Three
+        </button>
+        <button type="button">
+          Tab One
+        </button>
+        <button type="button">
+          Tab Two
+        </button>
+        <button type="button">
+          Tab Three
+        </button>
+      </p-tabs-bar>
     </form>
   </div>
 
