feat: add frosted demo for sdx26 | sas

--- a/src/sdx26/2/index.html
+++ b/src/sdx26/2/index.html
@@ -87,32 +87,15 @@
           <h4 class="prose-display-md text-center">479<span class="text-lg">km</span></h4>
         </div>
         <div class="p-fluid-md grid gap-fluid-md">
-          <div class="h-[200px] overflow-y-auto relative before:h-[60px] before:sticky before:block before:top-0 before:-z-1 before:pointer-events-none before:bg-fade-contrast-100-accent-to-b rounded-lg">
+          <div class="h-[300px] overflow-y-auto bg-masked-fade-to-t rounded-lg border-1">
+            <div class="sticky top-0 p-static-md bg-contrast-100-accent backdrop-blur-frosted">
+              <p class="prose-text-md text-center">Hello</p>
+            </div>
             <p class="prose-text-md text-center">High voltage for a new way of life: Experience the impressive performance of the Macan - on the road and at the charging station.</p>
             <p class="prose-text-md text-center">High voltage for a new way of life: Experience the impressive performance of the Macan - on the road and at the charging station.</p>
             <p class="prose-text-md text-center">High voltage for a new way of life: Experience the impressive performance of the Macan - on the road and at the charging station.</p>
           </div>
           <button class="explore-e-performance bg-contrast-100-accent backdrop-blur-frosted rounded-lg p-fluid-sm cursor-pointer transition hover:bg-contrast-200-accent">Explore E-Performance</button>
-          <p-tabs-bar>
-            <button type="button">
-              Tab One
-            </button>
-            <button type="button">
-              Tab Two
-            </button>
-            <button type="button">
-              Tab Three
-            </button>
-            <button type="button">
-              Tab One
-            </button>
-            <button type="button">
-              Tab Two
-            </button>
-            <button type="button">
-              Tab Three
-            </button>
-          </p-tabs-bar>
         </div>
       </div>
     </div>
@@ -153,37 +136,14 @@
         City
         <input class="bg-contrast-100-accent backdrop-blur-frosted rounded-md p-fluid-sm focus:outline focus:outline-contrast-300-accent" name="city" placeholder="Placeholder" value="Stuttgart" />
       </label>
-      <button class="bg-contrast-100-accent backdrop-blur-frosted rounded-lg p-fluid-sm cursor-pointer transition hover:bg-contrast-200-accent">Submit</button>
-      <button class="bg-contrast-100-accent backdrop-blur-frosted rounded-lg p-fluid-sm cursor-pointer transition hover:bg-contrast-200-accent">Cancel</button>
-      <p-tabs-bar>
-        <button type="button">
-          Tab One
-        </button>
-        <button type="button">
-          Tab Two
-        </button>
-        <button type="button">
-          Tab Three
-        </button>
-        <button type="button">
-          Tab One
-        </button>
-        <button type="button">
-          Tab Two
-        </button>
-        <button type="button">
-          Tab Three
-        </button>
-        <button type="button">
-          Tab One
-        </button>
-        <button type="button">
-          Tab Two
-        </button>
-        <button type="button">
-          Tab Three
-        </button>
-      </p-tabs-bar>
+      <button class="bg-contrast-200-accent backdrop-blur-frosted rounded-lg p-fluid-sm cursor-pointer transition hover:bg-contrast-300-accent">Submit</button>
+      <button class="bg-contrast-200-accent backdrop-blur-frosted rounded-lg p-fluid-sm cursor-pointer transition hover:bg-contrast-300-accent">Cancel</button>
+      <div class="overflow-x-auto py-static-md bg-masked-fade-x rounded-lg border-1">
+        <p class="prose-text-md whitespace-nowrap">High voltage for a new way of life: Experience the impressive performance of the Macan - on the road and at the charging station.</p>
+      </div>
+      <div class="overflow-x-auto py-static-md bg-masked-fade-x-init hover:bg-masked-fade-x rounded-lg border-1 transition-[mask] duration-long">
+        <p class="prose-text-md whitespace-nowrap">High voltage for a new way of life: Experience the impressive performance of the Macan - on the road and at the charging station.</p>
+      </div>
     </form>
     <form class="col-span-one-half p-fluid-md grid gap-fluid-sm">
       <label class="grid gap-fluid-xs">
@@ -208,37 +168,14 @@
         City
         <input class="bg-contrast-100-accent backdrop-blur-frosted rounded-md p-fluid-sm focus:outline focus:outline-contrast-300-accent" name="city" placeholder="Placeholder" value="Stuttgart" />
       </label>
-      <button class="bg-contrast-100-accent backdrop-blur-frosted rounded-lg p-fluid-sm cursor-pointer transition hover:bg-contrast-200-accent">Submit</button>
-      <button class="bg-contrast-100-accent backdrop-blur-frosted rounded-lg p-fluid-sm cursor-pointer transition hover:bg-contrast-200-accent">Cancel</button>
-      <p-tabs-bar>
-        <button type="button">
-          Tab One
-        </button>
-        <button type="button">
-          Tab Two
-        </button>
-        <button type="button">
-          Tab Three
-        </button>
-        <button type="button">
-          Tab One
-        </button>
-        <button type="button">
-          Tab Two
-        </button>
-        <button type="button">
-          Tab Three
-        </button>
-        <button type="button">
-          Tab One
-        </button>
-        <button type="button">
-          Tab Two
-        </button>
-        <button type="button">
-          Tab Three
-        </button>
-      </p-tabs-bar>
+      <button class="bg-contrast-200-accent backdrop-blur-frosted rounded-lg p-fluid-sm cursor-pointer transition hover:bg-contrast-300-accent">Submit</button>
+      <button class="bg-contrast-200-accent backdrop-blur-frosted rounded-lg p-fluid-sm cursor-pointer transition hover:bg-contrast-300-accent">Cancel</button>
+      <div class="overflow-x-auto py-static-md bg-masked-fade-x rounded-lg border-1">
+        <p class="prose-text-md whitespace-nowrap">High voltage for a new way of life: Experience the impressive performance of the Macan - on the road and at the charging station.</p>
+      </div>
+      <div class="overflow-x-auto py-static-md bg-masked-fade-x-init hover:bg-masked-fade-x rounded-lg border-1 transition-[mask] duration-long">
+        <p class="prose-text-md whitespace-nowrap">High voltage for a new way of life: Experience the impressive performance of the Macan - on the road and at the charging station.</p>
+      </div>
     </form>
   </div>
 
