test: update vrt test fixtures | jmn

--- a/src/ai-assistant-widget/index.html
+++ b/src/ai-assistant-widget/index.html
@@ -7,35 +7,6 @@
   <title>AI Assistant widget (Template)</title>
 </head>
 <body>
-<!--
-<div class="grid-template prose-text-sm text-center _pds-grid-visualization">
-  <div class="col-full p-fluid-sm bg-[rgba(0,0,255,.25)]">
-    .col-full
-  </div>
-  <div class="col-wide p-fluid-sm bg-[rgba(0,255,255,.25)]">
-    .col-wide
-  </div>
-  <div class="col-extended p-fluid-sm bg-[rgba(0,255,0,.25)]">
-    .col-extended
-  </div>
-  <div class="col-basic p-fluid-sm bg-[rgba(255,0,255,.25)]">
-    .col-basic
-  </div>
-  <div class="col-narrow p-fluid-sm bg-[rgba(255,0,255,.25)]">
-    <div class="max-w-[66ch] mx-auto">
-      <h3 class="prose-display-sm text-left">Foraging with Porsche in Finnish Lapland</h3>
-      <p-text  theme="light" size="x-large" tag="h2">A culinary adventure with the Taycan Cross Turismo, a roof tent and top chef, Rosa Tapola</p-text> <br>
-
-      <p-text class="" theme="light" size="medium" tag="h2">To own, drive or simply admire a Porsche is to be part of something that goes beyond engineering, beyond performance, beyond heritage. It’s a feeling. A feeling that connects us, inspires us, and keeps us coming back for more.</p-text> <br>
-      <p-text theme="light" size="medium" tag="h2">  It’s about the ignition on the left-hand side of the steering wheel, the gleaming crest on the bonnet and a heart that races that bit faster with every green light. It’s the next corner. And the one after that. It’s the design of the 356 and every iconic Porsche that followed. The distant echo of a childhood dream. The thrill of opening the garage – and knowing what comes next.</p-text> <br>
-      <p-text theme="light" size="medium" tag="h2"> It’s the kind of passion that turns owners into drivers, drivers into collectors, and collectors into lifelong enthusiasts. So powerful, in fact, that in 1975 a journalist captured it perfectly: “A Porsche is like no other car, and if you want one, there’s no substitute.” The phrase struck a chord. In the 1980s it was immortalised by Tom Cruise in the 1983 movie Risky Business, instantly embedding it in pop culture. The line took on a life of its own in the US in particular where it has resurfaced in campaigns, conversations and moments that have helped define Porsche for generations.</p-text>  <br>
-      <p-text theme="light" size="medium" tag="h2">   From posters to social posts, hashtags to conversations, fans have continued to keep those words alive for nearly 50 years – not as a slogan, but as a feeling. A mindset that’s lived on through city streets, racetracks, silver screens and collectors’ garages. It never left. And now, Porsche is taking a moment to celebrate the community that’s carried it all along.</p-text> <br>
-      <p-text theme="light" size="medium" tag="h2"> Because for those who know the feeling, there really is no substitute.</p-text> <br>
-      <p-text theme="light" size="medium" tag="h2"> But don’t just take our word for it. Read on to find out what fans from around the world have to say about that spine-tingling feeling you get from driving a Porsche.</p-text>
-    </div>
-  </div>
-</div>
--->
 
 <main class="m-fluid-md">
   <p-wordmark></p-wordmark>
@@ -61,8 +32,9 @@
     <div class="grid grid-rows-[minmax(0,1fr)_auto_auto] gap-fluid-sm min-h-full">
       <div class="grid content-start m-static-md mt-static-md z-0 ">
         <p-icon class="mb-static-md" theme="dark" source="/templates/assets/ai.svg" size="x-large"></p-icon>
-        <p-text theme="dark" size="x-large" tag="h2">Good to see you. </p-text>
-        <p-text theme="dark" size="x-large" tag="h2">How can I assist you?</p-text>
+        <p-text theme="dark" size="x-large">Good to see you. </p-text>
+        <p-text theme="dark" size="x-large">How can I assist you?</p-text>
+        <h2 class="prose-heading-xl font-normal">Bla </h2>
       </div>
       <div class="grid grid-cols-2 grid-rows-2 gap-static-sm m-static-xs">
         <p-link-card href="#your-link-here" class="col-span-1 row-span-2 bg-frosted rounded-3xl p-static-md min-h-[280px]">
